app/assets/stylesheets/bulletin.scss
@import '_imports';

.bulletin {
  h3 { color: $brown4; }
  & > * { margin-bottom: 20px; }
  .bulletin-header {
    position: relative;
    font-size: $font-size * 0.9;
    .vote {
      display: inline-block;
      & > div, & > a {
        display: inline-block;
        vertical-align: middle;
      }
      .icon-thumbs-up {
        font-size: 20px;
      }
    }
    .link, .bulletin-info {
      display: inline-block;
      vertical-align: top;
    }
    .link {
      width: 20%;
      max-width: 50px;
      color: $brown4;
      margin-right: 10px;
      i:hover {
        text-shadow: 2px 1px 5px $green;
      }
    }
  }
  .bulletin-comments {
    & > * { font-size: $font-size * 0.8; }
    textarea {
      width: 100%;
      height: 50px;
      margin-right: 10px;
    }
  }
}

form {
  .bulletin-body, textarea { min-height: 200px; }
}

.bulletin .bulletin-body {
  & > * { margin: 0 auto; }
  pre {
    background-color: #bababa;
    padding: 5px;
    color: white;
    width: 400px;
    overflow: scroll;
  }
  hr {
    border-bottom: solid 1px $brown2;
  }
  p {
    line-height: $font-size * 1.5;
    margin-bottom: $font-size * 1.5;
  }
  img {
    max-width: 95%;
    box-shadow: 0px 0px 3px #aaa;
    display: block;
    margin: 0 auto 10px;
  }
  iframe {
    width: 100%;
    height: 350px;
  }
  & > * {
    margin-bottom: 10px;
  }
  ol, ul {
    margin-left: 40px;
  }
  ul li {
    list-style-type: square;
  }
  blockquote {
    margin-left: 30px;
    border-left:solid 3px transparentize($brown2, 0.5);
    padding: 0 10px;
    font-style: italic;
    max-width: 500px;
  }
}

